--- a/upgrade_old_version.yaml
+++ b/upgrade_old_version.yaml
@@ -1,3 +1,17 @@
+- hosts: secondary_to_upgrade:primary_to_upgrade
+  serial: 1
+  become: yes
+  gather_facts: no
+  tasks:
+    - name: get env package info
+      package_facts:
+        manager: auto
+    - name: Install mongodb-base16 rpm package
+      shell: "rpm -ivh {{ src_path }}/mongodb-base16-*.rpm"
+      args:
+        warn: false
+      when: '"mongodb-base16" not in ansible_facts.packages'
+
 - hosts: secondary_to_upgrade
   serial: 1
   become: yes
@@ -9,10 +23,6 @@
         state: stopped
     - name: Clean mongo data directory
       shell: "/bin/rm -rf /var/lib/mongodb/*"
-      args:
-        warn: false
-    - name: Install mongo base rpm package
-      shell: "rpm -ivh {{ src_path }}/mongodb-base16-*.rpm"
       args:
         warn: false
     - name: Upgrade mongo rpm package
