--- a/post_upgrade.yaml
+++ b/post_upgrade.yaml
@@ -15,3 +15,32 @@
       systemd:
         name: master-monitor
         state: started
+
+- hosts: secondary_to_down
+  serial: 1
+  become: yes
+  gather_facts: no
+  tasks:
+    - name: get env package info
+      package_facts:
+        manager: auto
+    - name: Install mongodb-base18 rpm package
+      shell: "rpm -ivh {{ src_path }}/mongodb-base18-*.rpm"
+      args:
+        warn: false
+      when: '"mongodb-base18" not in ansible_facts.packages'
+    - name: Upgrade mongo rpm package to latest
+      shell: "rpm -Uvh {{ src_path }}/mongodb-server-5.0*.rpm"
+      args:
+        warn: false
+    - name: Restart mongod.service
+      systemd:
+        name: mongod.service
+        state: restarted
+        daemon_reload: yes
+    - name: Wait for mongo cluster status, Retry for 120 times
+      shell: "python {{ src_path }}/mongoup.py check_mongo_cluster_states"
+      register: result
+      until: result.rc == 0
+      retries: 120
+      delay: 5
