--- a/upgrade_old_version.yaml
+++ b/upgrade_old_version.yaml
@@ -35,7 +35,7 @@
         state: restarted
         daemon_reload: yes
     - name: Wait for mongo cluster status, Retry for 120 times
-      shell: "python {{ src_path }}/mongoup.py check_mongo_cluster_states"
+      shell: "python {{ src_path }}/mongoup.py check_mongo_cluster_states {{ down_node }}"
       register: result
       until: result.rc == 0
       retries: 120
@@ -64,7 +64,7 @@
         state: restarted
         daemon_reload: yes
     - name: Wait for mongo cluster status, Retry for 120 times
-      shell: "python {{ src_path }}/mongoup.py check_mongo_cluster_states"
+      shell: "python {{ src_path }}/mongoup.py check_mongo_cluster_states {{ down_node }}"
       register: result
       until: result.rc == 0
       retries: 120
